# psy-lib

./: .clang-format  .gitignore  LICENSE  README.md  gtk-hello.c  meson.build  meson_options.txt  requirements.txt  run_test.py
.github/workflows/: compile.yml
doc/: audio-with-psylib.md  building-psylib-on-linux.md  building-psylib-on-windows.md  building-psylib.md  drawing-with-psylib-developer.md  getting_started.md  introduction.md  meson.build  psy-doc.toml.in  stepping-through-experiment.md
examples/: README.md  meson.build
examples/c/: loop.c  meson.build  nested-loops.c
examples/python/: loop-child.py  loop-indices.py  loop.py  meson.build  play-wave.py  psy_operators.py  stepping-inheritance.py  stepping.py  timers.py
programs/: meson.build  psy-enum-fonts.c
psy/: .meson.build.swp  ddd-clock.c  ddd-clock.h  ddd-duration.c  ddd-duration.h  ddd-gl-error.c  ddd-gl-error.h  ddd-gl-fragment-shader.c  ddd-gl-fragment-shader.h  ddd-gl-program.c  ddd-gl-program.h  ddd-gl-shader.c  ddd-gl-shader.h  ddd-gl-texture.c  ddd-gl-texture.h  ddd-gl-vbuffer.c  ddd-gl-vbuffer.h  ddd-gl-vertex-shader.c  ddd-gl-vertex-shader.h  ddd-loop.c  ddd-loop.h  ddd-matrix4.cpp  ddd-matrix4.h  ddd-program.c  ddd-program.h  ddd-safe-int-private.c  ddd-safe-int-private.h  ddd-shader.c  ddd-shader.h  ddd-step.c  ddd-step.h  ddd-stepping-stones.c  ddd-stepping-stones.h  ddd-stimulus.c  ddd-stimulus.h  ddd-texture.c  ddd-texture.h  ddd-time-point.c  ddd-time-point.h  ddd-trial.c  (+143 more)
psy/backend_gtk/: meson.build  psy-gtk-window.c  psy-gtk-window.h
psy/gl/: meson.build  psy-gl-canvas.c  psy-gl-canvas.h  psy-gl-circle.c  psy-gl-circle.h  psy-gl-context.c  psy-gl-context.h  psy-gl-error.c  psy-gl-error.h  psy-gl-fragment-shader.c  psy-gl-fragment-shader.h  psy-gl-program.c  psy-gl-program.h  psy-gl-shader.c  psy-gl-shader.h  psy-gl-texture.c  psy-gl-texture.h  psy-gl-utilities.c  psy-gl-utilities.h  psy-gl-vbuffer.c  psy-gl-vbuffer.h  psy-gl-vertex-shader.c  psy-gl-vertex-shader.h
psy/hw/: meson.build  parallel-port.c  parallel-port.h  parport.c  parport.h  psy-parallel-port.c  psy-parallel-port.h  psy-parallel-trigger.c  psy-parallel-trigger.h  psy-parport.c  psy-parport.h
psy/jack/: meson.build  psy-jack-audio-device.c  psy-jack-audio-device.h
psy/portaudio/: meson.build  psy-pa-device.c  psy-pa-device.h
share/: meson.build
subprojects/: .gitignore
tests/: color.py  display_tests.py  main.c  meson.build  parallel_trigger.c  parallel_write.c  picture-test.c  python-enum-audio-dev.py  python-open-audio-device.py  python-test.py  sdl-window.c  suites.h  test-audio-channel-mapping.c  test-audio-utils.c  test-audio.c  test-canvas.c  test-color.c  test-gl-canvas.c  test-gl-utils.c  test-gtk-window.c  test-image-canvas.c  test-image.c  test-matrix4.c  test-parallel.c  test-picture.c  test-queue.c  test-ref-count.c  test-ref-count.py  test-stepping.c  test-text.c  test-time-utilities.c  test-timer.c  test-utility.c  test-visual-stimuli.c  test-visual-stimulus.c  test-wave.c  timer-test.c  unit-test-utilities.c  unit-test-utilities.h  vector-test.c  (+3 more)
toys/: meson.build  sleep-time.c
