
# Documentation and introspection

option (
    'introspection',
    type : 'boolean',
    value : true,
    description : 'Build gobject introspection for requires \'gobject-introspection\''
)
option(
    'documentation',
    type : 'boolean',
    value : true,
    description : 'build documentation requires gi_docgen (via pip e.g.) ' +
                  'and intropection of libpsy'
)

# enable features for specific backends

option (
    'jack2',
    type : 'boolean',
    value : false,
    description : 'Enable JACK2 as a backend for audio Linux (mac and ' +
                  'windows) you\'ll need the Jack2 development libraries'
)

option (
    'portaudio',
    type: 'boolean',
    value : true,
    description : 'Enable portaudio as backend for audio you\'ll need the ' +
                  'portaudio development libraries/packages'
)

option (
    'alsa',
    type : 'boolean',
    value : true,
    description : 'Enabe ALSA as a backend for audio Linux only depends on ' +
                  'libasound2-dev / alsa development libs'
)
