
# Documentation and introspection

option (
    'introspection',
    type : 'boolean',
    value : true,
    description : 'Build gobject introspection for requires \'gobject-introspection\''
)
option(
    'documentation',
    type : 'boolean',
    value : true,
    description : 'build documentation requires gi_docgen (via pip e.g.) ' +
                  'and intropection of libpsy'
)

# enable features for specific backends

option (
    'portaudio',
    type: 'feature',
    value : 'auto',
    description : 'Enable portaudio as backend for audio you\'ll need the ' +
                  'portaudio development libraries/packages'
)

option (
    'alsa',
    type : 'feature',
    value : 'auto',
    description : 'Enabe ALSA as a backend for audio Linux only depends on ' +
                  'libasound2-dev / alsa development libs'
)

option (
    'winmm',
    type : 'feature',
    value : 'auto',
    description : 'Library for windows timing stuff'
)
option (
    'kernel32',
    type : 'feature',
    value : 'auto',
    description : 'Library for windows purposes'
)

option (
    'jack2',
    type : 'boolean',
    value : false,
    description : 'Enable JACK2 as a backend for audio Linux (mac and ' +
                  'windows) you\'ll need the Jack2 development libraries'
)


# examples

option (
    'build-examples',
    type:'boolean',
    value: true,
    description: 'build the C/C++ examples'
)

# the toy programs are small programs that test some e.g. platform specific
# issue.

option(
    'build-toys',
    type:'boolean',
    value: false,
    description: 'Build the toy programs'
)
