
libpsy_headers += files(
    'psy-gl-error.h',
    'psy-gl-fragment-shader.h',
    'psy-gl-program.h',
    'psy-gl-shader.h',
    'psy-gl-texture.h',
    'psy-gl-vbuffer.h'
)

libpsyfiles += files(
    'psy-gl-error.c',
    'psy-gl-fragment-shader.c',
    'psy-gl-program.c',
    'psy-gl-shader.c',
    'psy-gl-texture.c',
    'psy-gl-vbuffer.c',
    'psy-gl-vertex-shader.c',
    'psy-gl-vertex-shader.h'
)
