
libpsy_headers += files(
    'psy-gl-circle.h',
    'psy-gl-context.h',
    'psy-gl-error.h',
    'psy-gl-fragment-shader.h',
    'psy-gl-program.h',
    'psy-gl-shader.h',
    'psy-gl-texture.h',
    'psy-gl-vbuffer.h',
    'psy-gl-vertex-shader.h'
)

libpsyfiles += files(
    'psy-gl-circle.c',
    'psy-gl-context.c',
    'psy-gl-error.c',
    'psy-gl-fragment-shader.c',
    'psy-gl-program.c',
    'psy-gl-shader.c',
    'psy-gl-texture.c',
    'psy-gl-vbuffer.c',
    'psy-gl-vertex-shader.c',
)
