
libpsy_headers += files(
    'psy-gl-canvas.h',
    'psy-gl-context.h',
    'psy-gl-error.h',
    'psy-gl-fragment-shader.h',
    'psy-gl-program.h',
    'psy-gl-shader.h',
    'psy-gl-texture.h',
    'psy-gl-utilities.h',
    'psy-gl-vbuffer.h',
    'psy-gl-vertex-shader.h'
)

libpsyfiles += files(
    'psy-gl-canvas.c',
    'psy-gl-context.c',
    'psy-gl-error.c',
    'psy-gl-fragment-shader.c',
    'psy-gl-program.c',
    'psy-gl-shader.c',
    'psy-gl-texture.c',
    'psy-gl-utilities.c',
    'psy-gl-vbuffer.c',
    'psy-gl-vertex-shader.c',
)
